[tool.poetry]
name = "llms"
version = "0.1.0"
description = "Repo reproduces the widely used llms"
authors = ["Hiren Makadia <hiren.makadia@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tiktoken = "^0.7.0"
urllib3 = "<=2.0"
transformers = "^4.41.2"
wandb = "^0.17.1"
tensorflow = "^2.16.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
